fixed text alignment

--- a/src/post/Post.css
+++ b/src/post/Post.css
@@ -34,12 +34,12 @@
 
 .postTitle{
 
-
     font-family: "Josefin Sans", sans-serif;
     font-size: 24px;
     font-weight: 700;
     margin-top: 15px;
     cursor: pointer;
+    text-align: center;
     
 }
 
